Added tzinfo-data gem to the comment microservice due to TZInfo::DataSourceNotFound exception* (HW-16)

--- a/src/comment/Gemfile
+++ b/src/comment/Gemfile
@@ -8,3 +8,5 @@ gem 'prometheus-client'
 gem 'rack'
 gem 'rufus-scheduler'
 gem 'json'
+# https://github.com/tzinfo/tzinfo/wiki/Resolving-TZInfo::DataSourceNotFound-Errors
+gem 'tzinfo-data'
