--- a/src/comment/Dockerfile
+++ b/src/comment/Dockerfile
@@ -1,25 +1,27 @@
 FROM alpine:3.7 AS build
-ENV APP_HOME /app
+ENV APP_RUNTIME /app_runtime
 RUN apk add g++ \
             make \
             ruby \
             ruby-dev && \
-    mkdir -p $APP_HOME && \
+    mkdir -p $APP_RUNTIME && \
     gem install bundler --no-ri --no-rdoc 
 
-WORKDIR $APP_HOME
-COPY . $APP_HOME
+WORKDIR $APP_RUNTIME
+COPY Gemfile* $APP_RUNTIME/
 RUN bundle install --jobs 4 --deployment --binstubs --standalone && \
     rm vendor/bundle/ruby/2.4.0/cache/*
 
 FROM alpine:3.7
-LABEL version="2.0"
+LABEL version="2.1"
+ENV APP_RUNTIME /app_runtime
 ENV APP_HOME /app
 RUN apk add --no-cache ruby
-COPY --from=build $APP_HOME $APP_HOME
+COPY --from=build $APP_RUNTIME $APP_RUNTIME
+COPY . $APP_HOME
 WORKDIR $APP_HOME
 
 ENV COMMENT_DATABASE_HOST comment_db
 ENV COMMENT_DATABASE comments
 
-CMD ["/app/bin/puma"]
+CMD ["/app_runtime/bin/puma"]
