--- a/infra/ansible/roles/docker_host/defaults/main.yml
+++ b/infra/ansible/roles/docker_host/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 # defaults file for docker_host
+env: local
 
 docker_host_prerequisite_packages:
   - apt-transport-https
@@ -16,5 +17,7 @@ docker_host_repos:
 
 docker_host_python_modules:
   - { module: docker, version: 3.4.1 }
+  - { module: docker-compose, version: 1.22.0 }
+  - { module: PyYAML, version: 3.11 }
 
 docker_host_user: docker-user
