Fixed gitlab_url in the gitlab_omnibus role, fixed gitlab_domain in the gitlab_omnibus playbook (HW-19)

--- a/infra/ansible/roles/gitlab_omnibus/defaults/main.yml
+++ b/infra/ansible/roles/gitlab_omnibus/defaults/main.yml
@@ -3,7 +3,7 @@
 
 gitlab_hostname: "{{ inventory_hostname }}"
 gitlab_domain: localdomain
-gitlab_external_url: http://{{ gitlab_hostname }}.{{ gitlab_domain }}
+gitlab_external_url: http://{{ gitlab_hostname }}{{ (gitlab_domain == "") | ternary ('', '.') }}{{ gitlab_domain }}
 
 gitlab_dir: /srv/gitlab
 gitlab_config_dir: "{{ gitlab_dir }}/config"
