--- a/infra/ansible/roles/gitlab_runner/defaults/main.yml
+++ b/infra/ansible/roles/gitlab_runner/defaults/main.yml
@@ -21,6 +21,7 @@ gitlab_runner_run_untagged: true
 gitlab_runner_locked: false
 gitlab_runner_executor: docker
 gitlab_runner_docker_image: alpine:latest
+gitlab_runner_docker_privileged: false
 
 gitlab_runner_docker_compose:
   version: '3'
@@ -41,3 +42,4 @@ gitlab_runner_docker_compose:
         - REGISTER_NON_INTERACTIVE=true
         - REGISTER_LOCKED={{ gitlab_runner_locked }}
         - REGISTER_RUN_UNTAGGED={{ gitlab_runner_run_untagged }}
+        - DOCKER_PRIVILEGED={{ gitlab_runner_docker_privileged }}
