Environments support added to CI/CD
Added environments (prod, stage) support to the
terraform docker_host module and gitlab-ci
deployment scripts* (HW-20)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ branch_start_review:
   before_script:
     - gitlab-ci/setup-ssh.sh
   script:
-    - gitlab-ci/deploy-review-host.sh
+    - gitlab-ci/deploy-host.sh stage
 
 branch_stop_review:
   stage: review
@@ -92,7 +92,7 @@ branch_stop_review:
   before_script:
     - gitlab-ci/setup-ssh.sh
   script:
-    - gitlab-ci/remove-review-host.sh
+    - gitlab-ci/remove-host.sh stage
 
 staging:
   stage: stage
