Added python library to the terraform Dockerfile to support ansible dynamic inventory via gce.py* (HW-20)

--- a/infra/terraform/Dockerfile
+++ b/infra/terraform/Dockerfile
@@ -1,6 +1,10 @@
 FROM hashicorp/terraform:light
 
-RUN apk add --update ansible
+RUN apk add --update ansible \
+                    py-crypto \
+                    py-libcloud \
+                    py-requests \
+                    python
 ENV USER root
 
 ENTRYPOINT ["/bin/terraform"]
