Prometheus service, USER_NAME in the docker compose (HW-21)
1. Added prometheus service to the docker compose microservices
2. Renamed USERNAME to USER_NAME in the docker compose microservices
due to conflict with $USERNAME – current user name

--- a/docker/microservices/.env.example
+++ b/docker/microservices/.env.example
@@ -2,7 +2,7 @@
 # Change this value to setup containers prefix name
 # COMPOSE_PROJECT_NAME=
 
-USERNAME=username_here
+USER_NAME=username_here
 
 # Ports list
 UI_PORT=9292
