Added node-exporter to prometheus configuration (HW-21)
1. Added node-exporter service to the docker compose
2. Added node-exporter to the prometheus.yml configuration

--- a/docker/microservices/docker-compose.yml
+++ b/docker/microservices/docker-compose.yml
@@ -36,6 +36,19 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--storage.tsdb.retention=1d'
+  node-exporter:
+    image: prom/node-exporter:v0.15.2
+    user: root
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
+    networks:
+      - front_net
 volumes:
   post_db:
   prometheus_data:
