Added mongodb monitoring to prometheus* (HW-21)
1. Added Dockerfile to build percona mongodb prometheus
exporter (used scratch base image)

2. Added mongodb job to prometeus.yml configuration

3. Added mongodb_exporter service to docker compose

4. Updated .env.example

--- a/docker/microservices/docker-compose.yml
+++ b/docker/microservices/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - front_net
       - back_net
   prometheus:
-    image: ${USER_NAME}/prometheus
+    image: ${USER_NAME}/prometheus:${PROMETHEUS_VERSION}
     ports:
       - '9090:9090'
     volumes:
@@ -49,6 +49,13 @@ services:
       - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
     networks:
       - front_net
+  mongodb_exporter:
+    image: loktionovam/mongodb_exporter:${MONGODB_EXPORTER_VERSION}
+    environment:
+      - MONGODB_URL='mongodb://comment_db:27017'
+    networks:
+      - front_net
+      - back_net
 volumes:
   post_db:
   prometheus_data:
