--- a/docker/microservices/.env.example
+++ b/docker/microservices/.env.example
@@ -11,4 +11,6 @@ UI_PORT=9292
 POST_VERSION=1.0
 UI_VERSION=1.0
 COMMENT_VERSION=1.0
+PROMETHEUS_VERSION=latest
+MONGODB_EXPORTER_VERSION=0.6.1
 MONGO_VERSION=3.2
