--- a/docker/microservices/.env.example
+++ b/docker/microservices/.env.example
@@ -13,4 +13,5 @@ UI_VERSION=1.0
 COMMENT_VERSION=1.0
 PROMETHEUS_VERSION=latest
 MONGODB_EXPORTER_VERSION=0.6.1
+BLACKBOX_EXPORTER_VERSION=0.12.0
 MONGO_VERSION=3.2
