--- a/docker/microservices/docker-compose.yml
+++ b/docker/microservices/docker-compose.yml
@@ -56,6 +56,11 @@ services:
     networks:
       - front_net
       - back_net
+  blackbox_exporter:
+    image: loktionovam/blackbox-exporter:v${BLACKBOX_EXPORTER_VERSION}
+    networks:
+      - front_net
+      - back_net
 volumes:
   post_db:
   prometheus_data:
