--- a/docker/.env.example
+++ b/docker/.env.example
@@ -14,4 +14,6 @@ COMMENT_VERSION=1.0
 PROMETHEUS_VERSION=latest
 MONGODB_EXPORTER_VERSION=0.6.1
 BLACKBOX_EXPORTER_VERSION=0.12.0
+CADVISOR_VERSION=0.29.0
+GRAFANA_VERSION=5.0.0
 MONGO_VERSION=3.2
