--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -17,7 +17,10 @@ scrape_configs:
     static_configs:
       - targets:
         - 'comment:9292'
-
+  - job_name: 'post'
+    static_configs:
+      - targets:
+        - 'post:5000'
   - job_name: 'node'
     static_configs:
       - targets:
@@ -56,3 +59,7 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: blackbox_exporter:9115
+  - job_name: 'cadvisor'
+    static_configs:
+      - targets:
+        - 'cadvisor:8080'
