Added alertmanager to the prometheus configuration (HW-22)
1. Created Dockerfile with custom alertmanager configuration
2. Added alertmanager service to docker-compose-monitoring.yml
3. Added alerting section to the prometheus configuration

--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -63,3 +63,13 @@ scrape_configs:
     static_configs:
       - targets:
         - 'cadvisor:8080'
+
+rule_files:
+  - "alerts.yml"
+
+alerting:
+  alertmanagers:
+  - scheme: http
+    static_configs:
+    - targets:
+      - "alertmanager:9093"
