--- a/docker/.env.example
+++ b/docker/.env.example
@@ -16,4 +16,5 @@ MONGODB_EXPORTER_VERSION=0.6.1
 BLACKBOX_EXPORTER_VERSION=0.12.0
 CADVISOR_VERSION=0.29.0
 GRAFANA_VERSION=5.0.0
+ALERTMANGER_VERSION=0.14.0
 MONGO_VERSION=3.2
