--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -61,6 +61,14 @@ services:
       - 3000:3000
     networks:
       - front_net
+  alertmanager:
+    image: ${USER_NAME}/alertmanager:${ALERTMANGER_VERSION}
+    command:
+      - '--config.file=/etc/alertmanager/config.yml'
+    ports:
+      - 9093:9093
+    networks:
+      - front_net
 volumes:
   prometheus_data:
   grafana_data:
