Added docker configuration tasks to docker_host ansible role* (HW-22)
1. Added docker_host_config_file, docker_host_config
2. Added configure_docker.yml tasks set
3. Added test_docker_daemon_conf test to molecule

--- a/infra/ansible/roles/docker_host/handlers/main.yml
+++ b/infra/ansible/roles/docker_host/handlers/main.yml
@@ -5,8 +5,16 @@
   service:
     name: docker
     enabled: true
+  become: true
 
 - name: start docker
   service:
     name: docker
     state: started
+  become: true
+
+- name: restart docker
+  service:
+    name: docker
+    state: restarted
+  become: true
