--- a/infra/ansible/roles/docker_host/defaults/main.yml
+++ b/infra/ansible/roles/docker_host/defaults/main.yml
@@ -21,3 +21,8 @@ docker_host_python_modules:
   - { module: PyYAML, version: 3.11 }
 
 docker_host_user: docker-user
+
+docker_host_config_file: /etc/docker/daemon.json
+
+# define docker daemon config in this variable
+docker_host_config: {}
