--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -63,7 +63,9 @@ scrape_configs:
     static_configs:
       - targets:
         - 'cadvisor:8080'
-
+  - job_name: 'docker-engine'
+    static_configs:
+      - targets: ['172.17.0.1:9323']
 rule_files:
   - "alerts.yml"
 
