--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -66,6 +66,10 @@ scrape_configs:
   - job_name: 'docker-engine'
     static_configs:
       - targets: ['172.17.0.1:9323']
+  - job_name: 'telegraf'
+    static_configs:
+      - targets:
+        - 'telegraf:9273'
 rule_files:
   - "alerts.yml"
 
