Fixed blackbox exporter docker image name in the docker compose (HW-22)

--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -33,7 +33,7 @@ services:
       - front_net
       - back_net
   blackbox_exporter:
-    image: loktionovam/blackbox-exporter:v${BLACKBOX_EXPORTER_VERSION}
+    image: loktionovam/blackbox_exporter:${BLACKBOX_EXPORTER_VERSION}
     networks:
       - front_net
       - back_net
