Added dashboards and datasources provisioning to grafana** (HW-22)
1. Added grafana 5.0.0 Dockerfile, image grafana/grafana
replaced by loktionovam/grafana
2. Added dashboard and datasource provision configuration
3. dashboards json files updated according to
https://community.grafana.com/t/what-is-the-correct-way-to-save-dashboard-json-for-use-in-provisioning/5254/5

--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -49,7 +49,7 @@ services:
     networks:
       - front_net
   grafana:
-    image: grafana/grafana:${GRAFANA_VERSION}
+    image: loktionovam/grafana:${GRAFANA_VERSION}
     volumes:
       - grafana_data:/var/lib/grafana
     environment:
