--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -70,6 +70,10 @@ scrape_configs:
     static_configs:
       - targets:
         - 'telegraf:9273'
+  - job_name: 'stackdriver'
+    static_configs:
+      - targets:
+        - 'stackdriver:9255'
 rule_files:
   - "alerts.yml"
 
