--- a/docker/.env.example
+++ b/docker/.env.example
@@ -18,4 +18,7 @@ CADVISOR_VERSION=0.29.0
 GRAFANA_VERSION=5.0.0
 ALERTMANGER_VERSION=0.14.0
 TELEGRAF_VERSION=1.7
+STRACKDRIVER_VERSION=0.5.1
 MONGO_VERSION=3.2
+
+STACKDRIVER_METRICS_PREFIXES="compute.googleapis.com/instance/cpu,compute.googleapis.com/instance/disk,compute.googleapis.com/instance/network"
