Updated stackdriver-exporter docker image** (HW-22)
frodenas/stackdriver-exporter image replaced
by loktionovam/stackdriver-exporter

--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -67,8 +67,6 @@ services:
       - 9093:9093
     networks:
       - front_net
-    env_file:
-      - $HOME/.docker/alertmanager.secrets
   telegraf:
     image: ${USER_NAME}/telegraf:${TELEGRAF_VERSION}
     ports:
@@ -78,14 +76,11 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
   stackdriver:
-    image: frodenas/stackdriver-exporter:v${STRACKDRIVER_VERSION}
+    image: loktionovam/stackdriver-exporter:${STRACKDRIVER_VERSION}
     ports:
       - 9255:9255
     networks:
       - front_net
-    volumes:
-      - $HOME/.docker/stackdriver.secrets:/stackdriver.secrets
-      - $HOME/.docker/gce-service-account.json:/gce-service-account.json
     environment:
       - STACKDRIVER_EXPORTER_MONITORING_METRICS_TYPE_PREFIXES="${STACKDRIVER_METRICS_PREFIXES}"
       - STACKDRIVER_EXPORTER_GOOGLE_PROJECT_ID=/stackdriver.secrets
