Fixed STACKDRIVER_EXPORTER_GOOGLE_PROJECT_ID variable** (HW-22)

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -21,4 +21,5 @@ TELEGRAF_VERSION=1.7
 STRACKDRIVER_VERSION=0.5.1
 MONGO_VERSION=3.2
 
+GOOGLE_PROJECT_ID=docker-1234
 STACKDRIVER_METRICS_PREFIXES="compute.googleapis.com/instance/cpu,compute.googleapis.com/instance/disk,compute.googleapis.com/instance/network"
