--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -82,9 +82,9 @@ services:
     networks:
       - front_net
     environment:
-      - STACKDRIVER_EXPORTER_MONITORING_METRICS_TYPE_PREFIXES="${STACKDRIVER_METRICS_PREFIXES}"
-      - STACKDRIVER_EXPORTER_GOOGLE_PROJECT_ID=/stackdriver.secrets
+      - STACKDRIVER_EXPORTER_MONITORING_METRICS_TYPE_PREFIXES=${STACKDRIVER_METRICS_PREFIXES}
       - GOOGLE_APPLICATION_CREDENTIALS=/gce-service-account.json
+      - STACKDRIVER_EXPORTER_GOOGLE_PROJECT_ID=${GOOGLE_PROJECT_ID}
 volumes:
   prometheus_data:
   grafana_data:
