--- a/docker/.env.example
+++ b/docker/.env.example
@@ -20,6 +20,7 @@ ALERTMANGER_VERSION=0.14.0
 TELEGRAF_VERSION=1.7
 STRACKDRIVER_VERSION=0.5.1
 MONGO_VERSION=3.2
+TRICKSTER_VERSION=0.1.1
 
 GOOGLE_PROJECT_ID=docker-1234
 STACKDRIVER_METRICS_PREFIXES=compute.googleapis.com/instance/cpu,compute.googleapis.com/instance/disk,compute.googleapis.com/instance/network
