--- a/monitoring/grafana/provisioning/datasources/main.yml
+++ b/monitoring/grafana/provisioning/datasources/main.yml
@@ -5,7 +5,7 @@ datasources:
     type: 'prometheus'
     access: 'proxy'
     org_id: 1
-    url: 'http://prometheus:9090'
+    url: 'http://trickster:8000'
     is_default: true
     version: 1
     editable: true
