--- a/infra/ansible/playbooks/reddit_microservices.yml
+++ b/infra/ansible/playbooks/reddit_microservices.yml
@@ -1,8 +1,12 @@
 ---
 - name: Run reddit microservices
   hosts: tag_docker-host
-
+  roles:
+    - docker_host
   tasks:
+
+    - name: force all notified handlers to run at this point, not waiting for normal sync points
+      meta: flush_handlers
 
     - name: Clone reddit microservices git repository
       git:
