--- a/infra/terraform/stage/terraform.tfvars.example
+++ b/infra/terraform/stage/terraform.tfvars.example
@@ -9,3 +9,7 @@ docker_host_disk_image = "docker-host-base"
 source_ranges = ["0.0.0.0/0"]
 
 size = 10
+
+app_provision_enabled = true
+
+app_name = "reddit_microservices"
