--- a/infra/ansible/playbooks/reddit_microservices.yml
+++ b/infra/ansible/playbooks/reddit_microservices.yml
@@ -3,6 +3,8 @@
   hosts: tag_docker-host
   roles:
     - docker_host
+  vars:
+    microservices_make_target: up
   tasks:
 
     - name: force all notified handlers to run at this point, not waiting for normal sync points
@@ -35,4 +37,6 @@
     - name: Run reddit microservices
       make:
         chdir: /home/docker-user/reddit-microservices
-        target: up
+        target: "{{ microservices_make_target }}"
+      tags:
+        - run
