Split reddit_microservices.yml playbook*** (HW-22)
reddit_microservices.yml split to configure_microservices.yml
and launch_microservices.yml playbooks

--- a/infra/ansible/playbooks/reddit_microservices.yml
+++ b/infra/ansible/playbooks/reddit_microservices.yml
@@ -1,42 +1,4 @@
 ---
-- name: Run reddit microservices
-  hosts: tag_docker-host
-  roles:
-    - docker_host
-  vars:
-    microservices_make_target: up
-  tasks:
-
-    - name: force all notified handlers to run at this point, not waiting for normal sync points
-      meta: flush_handlers
-
-    - name: Clone reddit microservices git repository
-      git:
-        dest: /home/docker-user/reddit-microservices
-        repo: https://github.com/Otus-DevOps-2018-05/loktionovam_microservices.git
-        version: monitoring-2
-
-    - name: Copy docker compose environment file
-      copy:
-        src: ~/.docker/reddit_microservices/.env
-        dest: /home/docker-user/reddit-microservices/docker/.env
-      no_log: true
-
-    - name: Copy alertmanager secrets file
-      copy:
-        src: ~/.docker/reddit_microservices/alertmanager/alertmanager.secrets
-        dest: /home/docker-user/reddit-microservices/monitoring/alertmanager/alertmanager.secrets
-      no_log: true
-
-    - name: Copy stackdriver gce service account file
-      copy:
-        src: ~/.docker/reddit_microservices/stackdriver/gce-service-account.json
-        dest: /home/docker-user/reddit-microservices/monitoring/stackdriver/gce-service-account.json
-      no_log: true
-
-    - name: Run reddit microservices
-      make:
-        chdir: /home/docker-user/reddit-microservices
-        target: "{{ microservices_make_target }}"
-      tags:
-        - run
+- import_playbook: docker_host.yml
+- import_playbook: configure_microservices.yml
+- import_playbook: launch_microservices.yml
