Added mgmt_host packer configuration*** (HW-22)
1. Tasks in awx_wrapper splitted to install_awx.yml
and configure_awx.yml

2. Added packer_mgmt_host.yml playbook

3. Added awx_wrapper_install, awx_wrapper_configure
tags to awx_wrapper role

4. Added packer mgmt_host.json configuration

--- a/infra/ansible/roles/awx_wrapper/meta/main.yml
+++ b/infra/ansible/roles/awx_wrapper/meta/main.yml
@@ -21,11 +21,27 @@ galaxy_info:
 dependencies:
   - role: geerlingguy.ansible
     become: true
+    tags:
+      - awx_wrapper_install
+      - install
   - role: geerlingguy.git
     become: true
+    tags:
+      - awx_wrapper_install
+      - install
   - role: geerlingguy.docker
     become: true
+    tags:
+      - awx_wrapper_install
+      - install
   - role: geerlingguy.pip
     become: true
+    tags:
+      - awx_wrapper_install
+      - install
   - role: geerlingguy.nodejs
     become: true
+    tags:
+      - skip_ansible_lint
+      - awx_wrapper_install
+      - install
