Added autoheal ansible role to automatic setup management node*** (HW-22)
autoheal role added to mgmt_host, packer_mgmt_host playbooks

--- a/infra/ansible/playbooks/packer_mgmt_host.yml
+++ b/infra/ansible/playbooks/packer_mgmt_host.yml
@@ -1,6 +1,9 @@
 ---
-- name: Install AWX
+- name: Install AWX with autoheal
   hosts: all
 
   roles:
-    - awx_wrapper
+    - role: awx_wrapper
+    - role: autoheal
+      vars:
+        autoheal_awx_address: http://mgmt-host-default-001/api
