--- a/infra/ansible/playbooks/mgmt_host.yml
+++ b/infra/ansible/playbooks/mgmt_host.yml
@@ -1,6 +1,9 @@
 ---
-- name: Install AWX
+- name: Install AWX with autoheal
   hosts: tag_mgmt-host
 
   roles:
-    - awx_wrapper
+    - role: awx_wrapper
+    - role: autoheal
+      vars:
+        autoheal_awx_address: http://mgmt-host-default-001/api
