--- a/docker/.env.example
+++ b/docker/.env.example
@@ -24,3 +24,5 @@ TRICKSTER_VERSION=0.1.1
 
 GOOGLE_PROJECT_ID=docker-1234
 STACKDRIVER_METRICS_PREFIXES=compute.googleapis.com/instance/cpu,compute.googleapis.com/instance/disk,compute.googleapis.com/instance/network
+
+FLUENTD_VERSION=0.12
