Added ELASTICSEARCH_VERSION to docker-compose-logging (HW-23)

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -26,3 +26,4 @@ GOOGLE_PROJECT_ID=docker-1234
 STACKDRIVER_METRICS_PREFIXES=compute.googleapis.com/instance/cpu,compute.googleapis.com/instance/disk,compute.googleapis.com/instance/network
 
 FLUENTD_VERSION=0.12
+ELASTICSEARCH_VERSION=6.4.2
