--- a/docker/.env.example
+++ b/docker/.env.example
@@ -27,3 +27,4 @@ STACKDRIVER_METRICS_PREFIXES=compute.googleapis.com/instance/cpu,compute.googlea
 
 FLUENTD_VERSION=0.12
 ELASTICSEARCH_VERSION=6.4.2
+KIBANA_VERSION=6.4.2
