--- a/docker/docker-compose-logging.yml
+++ b/docker/docker-compose-logging.yml
@@ -14,6 +14,6 @@ services:
       - "9200:9200"
 
   kibana:
-    image: kibana
+    image: kibana:${KIBANA_VERSION}
     ports:
       - "5601:5601"
