--- a/logging/fluentd/fluent.conf
+++ b/logging/fluentd/fluent.conf
@@ -3,7 +3,11 @@
   port 24224
   bind 0.0.0.0
 </source>
-
+<filter service.post>
+  @type parser
+  format json
+  key_name log
+</filter>
 <match *.**>
   @type copy
   <store>
