--- a/logging/fluentd/fluent.conf
+++ b/logging/fluentd/fluent.conf
@@ -3,11 +3,28 @@
   port 24224
   bind 0.0.0.0
 </source>
+
 <filter service.post>
   @type parser
   format json
   key_name log
 </filter>
+
+<filter service.ui>
+  @type parser
+  format grok
+  grok_pattern %{RUBY_LOGGER}
+  key_name log
+</filter>
+
+<filter service.ui>
+  @type parser
+  format grok
+  grok_pattern service=%{WORD:service} \| event=%{WORD:event} \| request_id=%{GREEDYDATA:request_id} \| message='%{GREEDYDATA:message}'
+  key_name message
+  reserve_data true
+</filter>
+
 <match *.**>
   @type copy
   <store>
