--- a/logging/fluentd/fluent.conf
+++ b/logging/fluentd/fluent.conf
@@ -25,6 +25,15 @@
   reserve_data true
 </filter>
 
+<filter service.ui>
+  @type parser
+  format grok
+  grok_pattern service=%{WORD:service} \| event=%{WORD:event} \| path=%{URIPATHPARAM:path} \| request_id=%{GREEDYDATA:request_id} \| remote_addr=%{IP:remote_addr} \| method= %{WORD:method} \| response_status=%{NUMBER:response_status}%{GREEDYDATA:message}
+  #task with* "service=ui               | event=request        | path=/                     | request_id=e68431ab-4bdc-4128-       | remote_addr=178.49.90.5        | method= GET             | response_status=200"
+  key_name message
+  reserve_data true
+</filter>
+
 <match *.**>
   @type copy
   <store>
