Added zipkin to logging docker compose configuration (HW-23)

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -28,3 +28,5 @@ STACKDRIVER_METRICS_PREFIXES=compute.googleapis.com/instance/cpu,compute.googlea
 FLUENTD_VERSION=0.12
 ELASTICSEARCH_VERSION=6.4.2
 KIBANA_VERSION=6.4.2
+
+ZIPKIN_ENABLED=true
