--- a/docker/docker-compose-logging.yml
+++ b/docker/docker-compose-logging.yml
@@ -1,5 +1,13 @@
 version: '3'
 services:
+  zipkin:
+    image: openzipkin/zipkin
+    ports:
+      - "9411:9411"
+    networks:
+      - front_net
+      - back_net
+
   fluentd:
     image: ${USER_NAME}/fluentd:${FLUENTD_VERSION}
     ports:
@@ -17,3 +25,7 @@ services:
     image: kibana:${KIBANA_VERSION}
     ports:
       - "5601:5601"
+
+networks:
+  back_net:
+  front_net:
