--- a/infra/ansible/roles/docker_host/tasks/configure_docker.yml
+++ b/infra/ansible/roles/docker_host/tasks/configure_docker.yml
@@ -5,3 +5,8 @@
     content: "{{ docker_host_config | to_nice_json }}"
     dest: "{{ docker_host_config_file }}"
   notify: restart docker
+
+- name: Setup sysctl vm.max_map_count (need to start Elasticsearch docker container)
+  sysctl:
+    name: vm.max_map_count
+    value: 262144
