--- a/kubernetes/ansible/kubernetes_the_hard_way.yml
+++ b/kubernetes/ansible/kubernetes_the_hard_way.yml
@@ -4,3 +4,5 @@
 - import_playbook: 05-generate-kubeconfigs.yml
 - import_playbook: 06-data-encryption.yml
 - import_playbook: 07-bootstraping-etcd.yml
+- import_playbook: 08-bootstrapping-kubernetes-controllers.yml
+- import_playbook: 08-kubernetes-frontend-load-balancer.yml
