--- a/kubernetes/ansible/05-generate-worker-kubeconfig.yml
+++ b/kubernetes/ansible/05-generate-worker-kubeconfig.yml
@@ -13,7 +13,7 @@
         --certificate-authority=ca.pem \
         --embed-certs=true \
         --server=https://{{ kubernetes_public_ip['items'].0.address }}:6443 \
-        --kubeconfig=${instance}.kubeconfig
+        --kubeconfig=worker-{{ item }}.kubeconfig
       args:
         chdir: files
 
