--- a/kubernetes/ansible/kubernetes_the_hard_way.yml
+++ b/kubernetes/ansible/kubernetes_the_hard_way.yml
@@ -6,3 +6,4 @@
 - import_playbook: 07-bootstraping-etcd.yml
 - import_playbook: 08-bootstrapping-kubernetes-controllers.yml
 - import_playbook: 08-kubernetes-frontend-load-balancer.yml
+- import_playbook: 09-bootstrapping-kubernetes-workers.yml
