Added 10, 11, 12 playbooks to the kubernetes_the_hard_way.yml* (HW-24)
1. Addd 10-configuring-kubectl.yml, 11-pod-network-routes.yml,
12-dns-addon.yml

2. Add kubernetes/ansible/files/{pem,csr,kubeconfig,encryption-config}
to the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ __pycache__
 secrets.tar
 pytestdebug.log
 infra/ansible/roles/geerlingguy*
+kubernetes/ansible/files/*.pem
+kubernetes/ansible/files/*.csr
+kubernetes/ansible/files/*.kubeconfig
+kubernetes/ansible/files/encryption-config.yaml
