Added  04-prepare-node.yml to the kubernetes_the_hard_way.yml* (HW-24)

--- a/kubernetes/ansible/03-provisioning-compute-resources.yml
+++ b/kubernetes/ansible/03-provisioning-compute-resources.yml
@@ -73,3 +73,11 @@
     - name: Import controller instances creation tasks
       include_tasks: 03-create-controller-instance.yml
       with_sequence: start=0 end=2
+
+    # Dirty hack here. It is better to poll the node
+    - name: Wait for 5 minutes while instances up
+      pause:
+        minutes: 5
+
+    - name: Refresh inventory to ensure new instaces exist in inventory
+      meta: refresh_inventory
