--- a/kubernetes/ansible/kubernetes_the_hard_way.yml
+++ b/kubernetes/ansible/kubernetes_the_hard_way.yml
@@ -1,5 +1,6 @@
 - import_playbook: 02-client-tools.yml
 - import_playbook: 03-provisioning-compute-resources.yml
+- import_playbook: 04-prepare-node.yml
 - import_playbook: 04-certificate-authority.yml
 - import_playbook: 05-generate-kubeconfigs.yml
 - import_playbook: 06-data-encryption.yml
